--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Task-3</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,12 +15,19 @@
     <div class="start_btn inactive">START</div>
       
     <!-- quiz -->
-    <div class="quiz_box">
+    <div class="quiz_box inactive">
         <h3>1. HTML stands for -</h3>
         <div class="option">
          <input type="radio"> HighText Machine Language</div>
-         <div class="option"> <input type="radio"> HyperText and links Markup Language</div>
-         <div class="option"><input type="radio"> HyperText Markup Language</div>
+         <div class="option"> <input type="radio"> HyperText and links Markup Language
+          <!-- <div class="check"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
+          <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"/>
+        </svg></div> -->
+      </div>
+         <div class="option"><input type="radio"> HyperText Markup Language
+          <!-- <div class="wrong"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
+          <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
+        </svg></div></div> --></div>
          <div class="option"> <input type="radio"> None of these</div>
    
   
@@ -32,6 +39,13 @@
 </div>
     
     </div>
+  </div>
+  <!-- result -->
+  <div class="result"><center>RESULT</center>
+    <div class="total">TOTAL QUESTION:</div>
+    <div class="right"> RIGHT QUESTION:</div>
+    <div class="wrong">WRONG QUESTION:</div>
+    <div class="percentage">PERCENTAGE:</div>
   </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
